# windows-rules-based-toolchain-example

./: .gitignore  MODULE.bazel  README.md  bazelw  bazelw.bat  toolchain.bzl
